update api fixtures
